# PIRAN

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGES.html  README.md  example.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  resonance.py  search.html  searchindex.js
.doctrees/: CHANGES.doctree  environment.pickle  index.doctree
.doctrees/piran/: cpdr.doctree  diffusion.doctree  gauss.doctree  helpers.doctree  magpoint.doctree  normalisation.doctree  plasmapoint.doctree  stix.doctree  wavefilter.doctree
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
_sources/piran/: gauss.rst.txt  helpers.rst.txt  magpoint.rst.txt
docs/: requirements.txt
docs/source/: CHANGES.rst  conf.py  index.rst
docs/source/piran/: cpdr.rst  stix.rst
piran/: __init__.py  bounce.py  cpdr.html  cpdr.py  cpdr2.py  cpdrsymbolic.py  diffusion.html  diffusion.py  gauss.html  gauss.py  helpers.html  helpers.py  mag_field.py  magfield.py  magpoint.html  magpoint.py  meshing.py  normalisation.html  normalisation.py  particles.py  plasmapoint.html  plasmapoint.py  resonance.py  stix.html  stix.py  timing.py  validators.py  wavefilter.html  wavefilter.py  waves.py
piran/experimental/: meshing.py
piran/tests/: test_astropy.py  test_bounce.py  test_cpdr.py  test_cpdrsymbolic.py  test_diffusion.py  test_gauss.py  test_helpers.py  test_magpoint.py  test_meshing.py  test_normalisation.py  test_plasmapoint.py  test_stix.py  test_validators.py  test_wavefilter.py
sphinx-docs/source/: conf.py  index.rst
sphinx-docs/source/piran/: cpdr.rst  cpdrsymbolic.rst  diffusion.rst  normalisation.rst  plasmapoint.rst  wavefilter.rst
src/scripts/: bounce_averaged_diffusion_coefficients.py  categorise_domain_in_x.py  cma_diagram.py  compare_figure2.py  compute_resonance_cone_angle.py  cunningham_figure1a.py  cunningham_figure1b.py  cunningham_figure2.py  cunningham_figure4.py  cunningham_figure5a.py  cunningham_figure5b.py  cunningham_figure6.py  diffusion_coefficients.py  find_roots_landau.py  find_singularity.py  glauert_figures_2_3.py  landau_singularities.py  resonant_roots.py  run_landau_singularities.sh
src/scripts/experimental/: categorise_domain_in_x.py  find_singularity.py
src/scripts/jgr_paper/: wave_dispersion.py
src/scripts/paper_figures/: dispersion_and_resonance.py  fixed_energy_plots.py  fixed_pitch_angle_plots.py  misc.py  normalisers_ratio.py  wave_dispersion.py
