[project]
name = "piran"
version = "0.1.0"
description = "piran code package"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "astropy",
    "numpy",
    "sympy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pre-commit"
]
dev-extra = [
    "ruff",
    "black"
]

[tool.setuptools.packages.find]
include = ["piran*"]
exclude = ["private_docs*", "quarto-docs*"]
