[build-system]
requires = ["setuptools >= 68", "setuptools_scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "piran"
dynamic = ["version"]
description = "piran code package"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "plasmapy",
    "astropy",
    "numpy",
    "scipy",
    "sympy",
    "matplotlib",
]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "pre-commit"
]
dev-extra = [
    "ruff",
    "black",
    "isort",
]
test = [
    "pytest",
    "coverage",
]
docs = [
    "numpydoc",
    "sphinx",
]

[tool.setuptools.packages.find]
include = ["piran*"]
exclude = ["private_docs*", "quarto-docs*"]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "EX01", # Example section
    "SA01", # See Also section
    "ES01", # Extended Summary section
]
exclude = [  # don't report on objects that match any of these regex
'^timing',
'^resonance',
'^conf$',
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"
